--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,12 +59,14 @@
     <Compile Include="Assets\Scripts\ChannelScript.cs" />
     <Compile Include="Assets\Ciconia Studio\_Shared Files\Scripts\Demo\UIButton_ShowNext.cs" />
     <Compile Include="Assets\Scripts\LightLine.cs" />
+    <Compile Include="Assets\Scripts\SnapButton.cs" />
     <Compile Include="Assets\Ciconia Studio\_Shared Files\Scripts\Demo\FreeCam.cs" />
     <Compile Include="Assets\Ciconia Studio\_Shared Files\Scripts\Demo\SuperCamera.cs" />
+    <Compile Include="Assets\Scripts\Snap.cs" />
     <Compile Include="Assets\Scripts\LightCommutator.cs" />
     <Compile Include="Assets\Scripts\Keys.cs" />
     <Compile Include="Assets\Ciconia Studio\_Shared Files\Scripts\Demo\FreeCamera.cs" />
-    <Compile Include="Assets\Scripts\Snap.cs" />
+    <Compile Include="Assets\Scripts\Info_Button.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Ciconia Studio\Shaders\Standard Shaders\BuiltIn\CS_Standard (Specular setup) Opaque.shader" />
